<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:gravity="center"
        android:orientation="horizontal">

      <Button
          android:id="@+id/stats"
          android:layout_width="155dp"
          android:layout_height="135dp"
          android:backgroundTint="@color/white"
          android:drawableTop="@drawable/ic_outline_bar_chart_24"
          android:text="@string/stats"
          android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:gravity="center"
        android:orientation="horizontal">

      <Button
          android:id="@+id/failure"
          android:layout_width="155dp"
          android:layout_height="145dp"
          android:backgroundTint="@color/white"
          android:drawableTop="@drawable/ic_outline_construction_24"
          android:text="@string/failure"
          android:textColor="@color/black" />

      <Button
          android:id="@+id/saved"
          android:layout_width="155dp"
          android:layout_height="145dp"
          android:backgroundTint="@color/white"
          android:drawableTop="@drawable/ic_outline_save_24"
          android:text="@string/failureSaved"
          android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:gravity="center"
        android:orientation="horizontal">

      <Button
          android:id="@+id/profiles"
          android:layout_width="145dp"
          android:layout_height="135dp"
          android:backgroundTint="@color/white"
          android:drawableTop="@drawable/ic_outline_home_24"
          android:text="@string/profile"
          android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp">

      <Button
          android:id="@+id/carga"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:backgroundTint="@color/white"
          android:drawableEnd="@drawable/ic_outline_cloud_upload_24"
          android:text="@string/carga"
          android:textColor="@color/black"
          android:textSize="11sp" />

      <TextView
          android:id="@+id/datos"
          android:layout_width="match_parent"
          android:layout_height="50dp"/>

    </LinearLayout>


  </LinearLayout>

</RelativeLayout>