<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".Carga">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!--Imágen de carga-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/epn_logo" />

        <!--Nombre de la aplicación-->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <!--Desarrollado por-->
        <TextView
            android:id="@+id/developedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/developed"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/by"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <!--Animación-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="carga_inicio.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>