<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:foregroundTint="#000000"
    tools:context=".Fallos2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/visualizacion_estadisticas"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="275dp"
            android:layout_height="2dp"
            android:background="?android:attr/panelFullBackground"
            android:foregroundTint="#000000"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="473dp"
            android:background="@drawable/cuadrado2"
            android:gravity="top|center"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <TextView
                android:id="@+id/prom_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15sp"
                android:text="@string/promedio_datos"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/promedio"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:textColor="@color/black"
                android:background="@drawable/cuadrado"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/fallos_mayo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15sp"
                android:text="@string/fallos_mayo"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fallos_mayoritarios"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:padding="15sp"
                android:background="@drawable/cuadrado"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_gravity="bottom|center"
                android:backgroundTint="@color/white"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>